Fixes scrollbar issue on computer browser during ui-router transitions.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -17,7 +17,7 @@ body{
 
 
 .snap-content{
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #DFE2DB;
 }
 
